--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "version": "0.0.1",
+  "version": "1.1",
   "private": true,
   "scripts": {
     "start": "react-native start",
@@ -29,7 +29,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.3",
+    "@notifee/react-native": "^5.4.1",
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-firebase/app": "^15.1.1",
+    "@react-native-firebase/firestore": "^15.1.1",
+    "@react-native-firebase/messaging": "^15.1.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
