--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.2.0",
